--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-   "name": "scheme",
-   "author": "Steve Champagne <champagst@gmail.com>",
-   "description": "Write Yourself a Scheme in 48 Hours",
-   "scripts": {
-      "test": "ava"
-   },
-   "dependencies": {
-      "parsimmon": "^0.9.1"
-   },
-   "devDependencies": {
-      "ava": "^0.15.2"
-   }
+  "name": "scheme",
+  "author": "Steve Champagne <champagst@gmail.com>",
+  "description": "Write Yourself a Scheme in 48 Hours",
+  "scripts": {
+    "test": "ava"
+  },
+  "dependencies": {
+    "lodash": "^4.14.2",
+    "parsimmon": "^0.9.1"
+  },
+  "devDependencies": {
+    "ava": "^0.15.2"
+  }
 }
