--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "test": "ava"
   },
   "dependencies": {
-    "lodash": "^4.14.2",
-    "parsimmon": "^0.9.1"
+    "parsimmon": "^0.9.1",
+    "ramda": "^0.22.1"
   },
   "devDependencies": {
     "ava": "^0.15.2"
